--- a/Noticias/src/app/Componentes/inicio/inicio.component.html
+++ b/Noticias/src/app/Componentes/inicio/inicio.component.html
@@ -19,15 +19,18 @@
     <br>
 
     <div class="row">
-      <div  *ngFor="let serie of series; let i=index;">
+      <div  class="col-md-4" *ngFor="let serie of series; let i=index;">
         <br>
-          <div class="card" style="width: 20rem; height: 40rem">
+          <div class="card" style="width: 20rem; height: 45rem">
 
             <div class="card-block">
               <h4  class="card-title">Auto</h4>
 
               <app-noticias [noticias]="serie"></app-noticias>
 
+              <br>
+              <br>
+              <button class="btn btn-primary" (click)="crearNoticia(serie)">Guardar</button>
             </div>
           </div>
         </div>
