Traer Datos Guardados de BDD (node red)

--- a/Noticias/src/app/Componentes/inicio/inicio.component.html
+++ b/Noticias/src/app/Componentes/inicio/inicio.component.html
@@ -24,7 +24,7 @@
           <div class="card" style="width: 20rem; height: 45rem">
 
             <div class="card-block">
-              <h4  class="card-title">Auto</h4>
+              <h4  class="card-title">Noticia</h4>
 
               <app-noticias [noticias]="serie"></app-noticias>
 
