--- a/Noticias/src/app/Componentes/noticias/noticias.component.html
+++ b/Noticias/src/app/Componentes/noticias/noticias.component.html
@@ -1,7 +1,7 @@
 <div>
 
-  <p>Titulo:<strong>{{noticias.title}}</strong></p>
-  <p>Popularidad:{{noticias.author}}</p>
+  <p><strong>{{noticias.title}}</strong></p>
+  <p>Autor: {{noticias.author}}</p>
 
   <img class="ImagenCarta" src="{{noticias.urlToImage}}" alt="">
 </div>
