--- a/Noticias/src/app/Componentes/inicio/inicio.component.html
+++ b/Noticias/src/app/Componentes/inicio/inicio.component.html
@@ -6,7 +6,9 @@
     <div class="row">
       <div class="col-md-6">
         <div class="bg" id ="main-creative" >
-          <img class="concord-img"src="">
+          <br>
+          <br>
+          <img class="concord-img"src="http://www.etesi.com/wp-content/uploads/2017/04/noticias_web.jpg">
         </div>
       </div>
       <div class="col-md-6"></div>
@@ -22,12 +24,9 @@
       <div  class="col-md-4" *ngFor="let serie of series; let i=index;">
         <br>
           <div class="card" style="width: 20rem; height: 45rem">
-
             <div class="card-block">
               <h4  class="card-title">Noticia</h4>
-
               <app-noticias [noticias]="serie"></app-noticias>
-
               <br>
               <br>
               <button class="btn btn-primary" (click)="crearNoticia(serie)">Guardar</button>
