--- a/Noticias/src/app/app.component.html
+++ b/Noticias/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['inicio']">Noticias</a>
+        <a class="nav-link" [routerLink]="['noticias-desde-la-api']">Noticias</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" [routerLink]="['traer-datos-servidor-bluemix']">Noticias Guardadas</a>
